# pscl

./: .gitignore  README.md  backend-interface.md  backend.sh  blank.build  busybox-config.config  flake.nix  main.sh  make-package-dir.sh  pkg  pkg.sh  pscl  stdlib.sh  tree.awk
acl/: acl.build
attr/: attr.build
automake/: automake.build
cryptsetup/: cryptsetup.build
docs/: backend-interface.md  extension-api.md
efibootmgr/: efibootmgr.build
expat/: expat.build
extensions/: backend.sh  extension-management.sh  interactive-menu.sh  stdlib.sh
fastfetch/: .fastfetch.build.swp
file/: file.build
findutils/: findutils.build
flex/: flex.build
flit-core/: flit-core.build
gdbm/: gdbm.build
gettext/: gettext.build
gzip/: gzip.build
json-c/: json-c.build
libcap/: libcap.build
lz4/: lz4.build
mpc/: mpc.build
ninja/: ninja.build
package-management/: blank.build
package-management/bison/: bison.build
package-management/bzip2/: bzip2.build
package-management/cmake/: cmake.build
package-management/cpio/: cpio.build
package-management/dbus/: dbus.build
package-management/diffutils/: diffutils.build
package-management/efivar/: efivar.build
package-management/gawk/: gawk.build
package-management/grep/: grep.build
package-management/kmod/: kmod.build
package-management/libffi/: libffi.build
package-management/make-ca/: make-ca.build
package-management/man-pages/: man-pages.build
package-management/meson/: meson.build
package-management/mpfr/: mpfr.build
package-management/p11-kit/: p11-kit.build
package-management/packaging/: packaging.build
package-management/perl/: perl.build
package-management/pkgconf/: pkgconf.build
package-management/procps-ng/: procps-ng.build
package-management/shadow/: shadow.build
package-management/systemd/: systemd.build
package-management/systemd-man-pages/: systemd-man-pages.build
readline/: readline.build
repos/main/acl/: configure  metadata
repos/main/alacritty/: build_phase  install  metadata
repos/main/alsa-lib/: configure  install  metadata
repos/main/at-spi2-core/: configure  metadata
repos/main/attr/: configure  metadata
repos/main/autoconf/: configure  metadata
repos/main/autoconf-archive/: install  metadata
repos/main/automake/: configure  metadata
repos/main/bash/: configure  install  metadata
repos/main/bc/: configure  metadata
repos/main/binutils/: build_phase  configure  install  metadata
repos/main/bison/: configure  metadata
repositories/main/meson/: meson.build
sed/: sed.build
tcl/: tcl.build
tzdata/: tzdata.build
wget/: wget.build
wheel/: wheel.build
which/: which.build
xz/: xz.build
zstd/: zstd.build
(+853 files in other folders)
